# QTDecisionMaker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  WINDOWS_BUILD.md  app.rc  column.cpp  column.h  columntests.cpp  columntests.h  installer.nsi  main.cpp  row.cpp  row.h  rowtests.cpp  rowtests.h  table.cpp  table.h  tabletests.cpp  tableviewerwindow.cpp  tableviewerwindow.h  tableviewerwindow.ui  test_main.cpp  test_main.h  validate_dll_deployment.cmake  validate_windows_config.sh  vcpkg.json  windows_deploy.cmake
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
include/: Column.h  DataType.h  FileSystemManager.h  MenuBarEdit.h  MenuBarFile.h  MenuBarHelp.h  MenuBarView.h  PreferencesManager.h  PreferencesWindow.h  Table.h  TableColumnDataDock.h  TableDataDock.h  TableManager.h  TableViewerMenubar.h  TableViewerToolbar.h  TableViewerWindow.h  column.h  table.h  tableManager.h  tableViewerMenubar.h  tableViewerToolbar.h  tableviewerwindow.h
include/DataTypes/: BoolType.h  DescType.h  LinkType.h  MoneyType.h  NameType.h  NumberType.h  RatingType.h
src/: Column.cpp  DataType.cpp  FileSystemManager.cpp  MenuBarEdit.cpp  MenuBarFile.cpp  MenuBarHelp.cpp  MenuBarView.cpp  PreferencesManager.cpp  PreferencesWindow.cpp  Row.cpp  Table.cpp  TableColumnDataDock.cpp  TableDataDock.cpp  TableManager.cpp  TableViewerMenubar.cpp  TableViewerToolbar.cpp  TableViewerWindow.cpp  column.cpp  main.cpp  row.cpp  table.cpp  tableManager.cpp  tableViewerMenubar.cpp  tableViewerToolbar.cpp  tableviewerwindow.cpp
tests/: columntests.cpp  datatypetests.cpp  enhanced_columntests.cpp  enhanced_rowtests.cpp  enhanced_worthcalculationtests.cpp  filesystemtests.cpp  preferencestests.cpp  rowtests.cpp  tablemanagertests.cpp  tabletests.cpp  test_main.h  worthcalculationtests.cpp
ui/: tableviewerwindow.ui
